--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -11,7 +11,7 @@ html {
 
 body {
     margin: 0;
-    padding: 0;
+    padding: 0 ;
     font-family: 'Public Sans', sans-serif;
     font-size: $font-med;
     color: $grayishBlue;
@@ -37,11 +37,13 @@ h1 {
     font-size: 2.5rem;
     letter-spacing: -0.044643rem;
     margin-bottom: 1rem;
+    line-height: 47px;
 
     @include breakpoint-up(large) {
         font-size: $font-xlg;
         line-height: 4rem;
         letter-spacing: -0.0625rem;
+        margin-bottom: 1.5rem;
     }
 }
 
@@ -69,9 +71,10 @@ p {
 
     @include breakpoint-up(large) {
         font-size: $font-med;
-        line-height: 1.75rem;
+        line-height: 1.75rem; 
         letter-spacing: -0.017578rem;
         text-align: left;
+        margin-bottom: 2.25rem;
     }
 }
 
@@ -96,6 +99,8 @@ a:hover {
         @include breakpoint-up (large) {
             padding-top: 6rem;
             padding-bottom: 6rem;
+            padding-right: 0;
+            padding-left: 0;
         }
     }
 
@@ -128,10 +133,12 @@ a:hover {
     }
 
     &--pb {
-        padding-bottom: 4rem;
+        padding-bottom: 2.5rem;
+        padding-top: 2.5rem;
 
         @include breakpoint-up (large) {
-            padding-bottom: 6rem;
+            padding-bottom: 3rem;
+            padding-top: 3rem;
         }
     }
 
